--- a/src/pages/CharacterCreator/CharacterCreator.css
+++ b/src/pages/CharacterCreator/CharacterCreator.css
@@ -3,3 +3,24 @@
 	overflow: auto;
 	width: 100%;
 }
+
+.modalBG {
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.5);
+	bottom: 0;
+	display: flex;
+	justify-content: center;
+	left: 0;
+	position: fixed;
+	right: 0;
+	top: 0;
+	z-index: 9999;
+}
+
+.modalBG > * {
+	background-color: var(--main-blue-dark);
+}
+
+.modalBG.Villain > * {
+	background-color: var(--main-red-dark);
+}
