--- a/src/components/IconDropdown/IconDropdown.css
+++ b/src/components/IconDropdown/IconDropdown.css
@@ -51,7 +51,7 @@
 	overflow: hidden;
 	position: absolute;
 	right: 0;
-	z-index: 100;
+	z-index: 1000;
 }
 
 .iconDropdown .dropdownList > div {
@@ -70,15 +70,14 @@
 }
 
 .iconDropdown .modalBack {
-	background-color: black;
+	background-color: rgba(0, 0, 0, 0.25);
 	bottom: 0;
 	cursor: default;
 	left: 0;
-	opacity: 0.25;
 	position: fixed;
 	right: 0;
 	top: 0;
-	z-index: 10;
+	z-index: 100;
 }
 
 .iconDropdown.disabled {
