--- a/src/components/ModalSelectPower/ModalSelectPower.css
+++ b/src/components/ModalSelectPower/ModalSelectPower.css
@@ -31,7 +31,8 @@
 
 #modalSelectPower #powerSelectionPanel > div {
 	margin: 0px 4px;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 	padding: 0px;
 	white-space: nowrap;
 	width: 100%;
@@ -47,7 +48,7 @@
 	background-color: var(--main-blue-dark);
 }
 
-#modalSelectPower #powerSelectionPanel > div > *.selected::after {
+#modalSelectPower #powerSelectionPanel > div:first-child > *.selected::after {
 	content: '►';
 	position: absolute;
 	right: 4px;
@@ -59,6 +60,12 @@
 
 #modalSelectPower #powerSelectionPanel > div > *.taken {
 	color: #a0a0a0;
+}
+
+#modalSelectPower .spaceMe {
+	border-top: solid 1px var(--main-blue);
+	margin: 8px 8px 0px 8px;
+	padding: 0px !important;
 }
 
 .Villain #modalSelectPower #powerSelectionPanel > div > *.selected {
