--- a/src/components/IconDropdown/IconDropdown.css
+++ b/src/components/IconDropdown/IconDropdown.css
@@ -1,9 +1,10 @@
 .iconDropdown {
+	align-items: center;
 	background-color: white;
 	border-radius: 4px;
 	color: black;
 	cursor: pointer;
-	display: inline;
+	display: inline-flex;
 	font-size: 14px;
 	height: 23px;
 	margin: 2px;
@@ -17,15 +18,19 @@
 }
 
 .iconDropdown > div:first-child::after {
+	align-items: center;
 	background-color: #e0e0e0;
 	border-bottom: solid 1px gray;
 	border-radius: 4px;
 	border-right: solid 1px gray;
+	bottom: 0px;
 	content: '▼';
+	display: flex;
+	justify-content: center;
 	padding: 2px 0 1px 0;
 	position: absolute;
 	right: 0px;
-	text-align: center;
+	top: 0px;
 	width: 23px;
 }
 
@@ -104,4 +109,11 @@
 
 .Villain .iconDropdown.disabled {
 	color: var(--main-red-dark);
+}
+
+@media screen and (max-width: 680px) {
+	.iconDropdown {
+		height: 30px;
+		min-height: 30px;
+	}
 }
