Slots can now be added to powers.

--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,8 @@
   --main-red-dark: #180808;
   --header-gold: #ffd040;
   --header-gradient: #804000;
-  --button-confirm: #306030;
-  --button-confirm-highlight: #408040;
+  --button-confirm: #408040;
+  --button-confirm-highlight: #20b020;
   --button-cancel: #802020;
   --button-cancel-highlight: #a02020;
 }
