--- a/src/pages/CharacterDesigner/CharacterDesigner.css
+++ b/src/pages/CharacterDesigner/CharacterDesigner.css
@@ -72,8 +72,9 @@
 	display: grid;
 	grid-column: 1;
 	grid-row: 2;
-	grid-template-columns: 32px auto auto 32px;
-	grid-template-rows: 32px 32px;
+	grid-template-columns: 34px auto auto 32px;
+	grid-template-rows: 34px 34px;
+	height: 68px;
 }
 
 #characterDesigner #generalControls > div {
@@ -84,11 +85,17 @@
 
 #characterDesigner #generalControls #themeChanger {
 	align-items: center;
+	background-color: black;
+	border-radius: 16px;
 	display: flex;
 	flex-direction: column;
 	grid-column: 1;
 	grid-row: 1 / 3;
+	height: 66px;
 	justify-content: center;
+	margin: 0;
+	padding: 1px;
+	width: 34px;
 }
 
 #characterDesigner #generalControls #themeChanger > div {
