Small tweaks and fixes; also a little more progress on enhancement assignment.

--- a/src/components/ModalEnhancePower/ModalEnhancePower.css
+++ b/src/components/ModalEnhancePower/ModalEnhancePower.css
@@ -11,6 +11,14 @@
 
 #modalEnhancePower #enhanceHeader h3 {
 	flex-basis: 99%;
+	background-clip: initial;
+	background-color: #f3ec78;
+    background-image: linear-gradient(to bottom, var(--header-gold), var(--header-gradient));
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
 
 #modalEnhancePower #modalEnhancePower button {
