--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@ a:visited {
 
 h1, h2, h3, h4, h5 {
   font-family: 'Red Circle';
+  font-weight: normal;
   margin: 0;
   padding: 0;
   text-align: center;
