--- a/src/components/Enhancement/Enhancement.css
+++ b/src/components/Enhancement/Enhancement.css
@@ -1,6 +1,7 @@
 /* Stretch to fit whatever container we're in! */
 div.enhancement {
 	align-items: center;
+	border-radius: 50%;
 	display: flex;
 	height: 100%;
 	justify-content: center;
@@ -13,4 +14,33 @@ div.enhancement img {
 	border: none;
 	height: 100%;
 	width: 100%;
+}
+
+div.enhancement.HO {
+	background: url('../../assets/images/overlay/HO.png') no-repeat top right;
+	background-size: 100%;
+}
+
+div.enhancement.IO {
+	background: url('../../assets/images/overlay/IO.png') no-repeat top right;
+	background-size: 100%;
+}
+
+div.enhancement.blank {
+	background: var(--main-blue) url('../../assets/images/ui/enhancementSlot.png') no-repeat top right;
+	background-size: 100%;
+}
+
+div.enhancement div.specialText {
+	align-items: center;
+	display: flex;
+	font-size: 10px;
+	justify-content: center;
+	margin: 0;
+	padding: 0;
+	position: absolute;
+}
+
+.Villain div.enhancement.blank {
+	background-color: var(--main-red);
 }
